test/parsing/ferguson/many-errors-2.good
many-errors-2.chpl:1: error: syntax error near 't6'
many-errors-2.chpl:5: error: syntax error near ';'
many-errors-2.chpl:9: error: syntax error near '}'
many-errors-2.chpl:12: error: syntax error near 'x'
many-errors-2.chpl:16: error: syntax error near 'x'
many-errors-2.chpl:1: warning: an implicit module named 'many-errors-2' is being introduced to contain file-scope code
many-errors-2.chpl:1: error: attempt to redefine reserved type 'real'
